--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1 class="text-uppercase">Project - To do list</h1>
       <br />
       <div class="form-inline">
-        <div class="form-group">
+        <div class="form-group col-4">
           <div class="input-group mb-3">
             <input
               type="text"
@@ -32,13 +32,13 @@
               placeholder="Search for ..."
               id="search-task-input"
             />
-            <button class="btn btn-primary" type="button" id="search-task-btn">
+            <button class="btn btn-primary ml-2" type="button" id="search-task-btn">
               Go !
             </button>
           </div>
         </div>
 
-        <div class="form-group pl-5">
+        <div class="form-group col-4">
           <div class="input-group mb-3">
             <div class="dropdown">
               <button
@@ -57,7 +57,7 @@
           </div>
         </div>
 
-        <div class="form-group pl-5">
+        <div class="form-group col-4">
           <div class="input-group mb-3">
             <button
               type="button"
@@ -67,7 +67,6 @@
             >
               Add Task
             </button>
-            <!-- Modal -->
             <!-- Modal -->
             <div
               class="modal fade"
