--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
       crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="./js//main.js?v2"></script>
+    <script src="./js/main.js?"></script>
+    <script>
+      document.querySelector('script[src="./js/main.js?"]').src =
+      './js/main.js?v=' + new Date().getTime();
+    </script>;
   </body>
 </html>
