--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
                       </div>
                       <div class="form-group">
                         <label for="message-text" class="col-form-label"
-                          >Message:</label
+                          >Level:</label
                         >
                         <select class="custom-select col-12 task-level">
-                          <option value="0" disabled selected>Level</option>
                           <option value="high">High</option>
                           <option value="medium">Medium</option>
                           <option value="low">Low</option>
